# SysID-Neural-ODEs

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configurations/: search_types.py  test.py  utils.py
configurations/general/: base.py  search.py
configurations/wolf_2025_ident/: __init__.py  base.py  search.py
configurations/wolf_2026_augmented/: base.py  search.py
configurations/wolf_2026_graph/: base.py  search.py
neuralsysid/: __init__.py
neuralsysid/data/: __init__.py  datasets.py  io.py  noise.py  preparation.py  preprocessing.py
neuralsysid/models/: __init__.py  neuralnetworks.py  outputdecoders.py  predictors.py  statedynamics.py  stateencoders.py  timesteppers.py
neuralsysid/training/: __init__.py  pipeline.py  trainer.py
neuralsysid/utils/: __init__.py  helpers.py  logging.py  plotting.py
notebooks/: train_example.ipynb
notebooks/.ipynb_checkpoints/: train_example-checkpoint.ipynb
tests/: conftest.py
tests/data/: test_datasets.py  test_preparation.py
tests/models/: test_neuralnetworks.py  test_outputdecoders.py  test_predictors.py  test_statedynamics.py  test_stateencoders.py  test_timesteppers.py
tests/reference_impls/: __init__.py  neuroman.py  onesteppred.py  sequencepred.py
tests/training/: test_pipeline.py  test_trainer.py
tests/utils/: test_plotting.py
